# psi

./: .gitignore
docs/: log_1_1.md  logs_1_1.md  logs_1_2.md  logs_2_1.md  sprawozdanie.md
src/udp/: docker-compose.yml  run-with-logs.sh
src/udp/c/: CMakeLists.txt  bytes_generator.c  bytes_generator.h  datagram.c  datagram.h  docker-compose.c.yml  dockerfile.client  dockerfile.server  entrypoint.sh  run-with-logs.sh  run-with-netem.sh  udp_client.c  udp_server.c
src/udp/python/: bytes_generator.py  datagram.py  docker-compose.py.yml  docker-compose.python.yml  dockerfile.client  dockerfile.server  test_datagram.py  udp_client.py  udp_server.py
tcp/: .clang-format  CMakeLists.txt  binary_tree.c  binary_tree.h  buffer.c  buffer.h  docker-compose.yml  dockerfile.client  dockerfile.server  docs_2_1.md  tcp_client.c  tcp_server.c
